adding basic functionality

--- a/GUI/gui.ui
+++ b/GUI/gui.ui
@@ -128,7 +128,7 @@
         </layout>
        </item>
        <item>
-        <widget class="QTableView" name="results"/>
+        <widget class="QTableWidget" name="results"/>
        </item>
       </layout>
      </widget>
