--- a/GUI/gui.ui
+++ b/GUI/gui.ui
@@ -93,7 +93,7 @@
           </widget>
          </item>
          <item row="4" column="1">
-          <widget class="QLineEdit" name="speed"/>
+          <widget class="QComboBox" name="speed"/>
          </item>
         </layout>
        </item>
@@ -128,7 +128,44 @@
         </layout>
        </item>
        <item>
-        <widget class="QTableWidget" name="results"/>
+        <widget class="QTableWidget" name="results">
+         <attribute name="verticalHeaderVisible">
+          <bool>true</bool>
+         </attribute>
+         <column>
+          <property name="text">
+           <string>speed</string>
+          </property>
+          <property name="font">
+           <font>
+            <weight>75</weight>
+            <bold>true</bold>
+           </font>
+          </property>
+         </column>
+         <column>
+          <property name="text">
+           <string>hostname</string>
+          </property>
+          <property name="font">
+           <font>
+            <weight>75</weight>
+            <bold>true</bold>
+           </font>
+          </property>
+         </column>
+         <column>
+          <property name="text">
+           <string>filename</string>
+          </property>
+          <property name="font">
+           <font>
+            <weight>75</weight>
+            <bold>true</bold>
+           </font>
+          </property>
+         </column>
+        </widget>
        </item>
       </layout>
      </widget>
